--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "investapp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api-invest.vercel.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,7 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.6.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
